File Browser Crash while listing big folders in preview mode (fonts, images...). #46299

Closed
opened 2015-09-28 07:01:30 +02:00 by zdy · 21 comments
Member

System Information
Windows 10
Nvidia GeForce GT 750M with latest drivers version 10.18.13.5362
I am using CPU for Cycles renders.
750 GB Hard Drive
16 GB of RAM

Blender Version
Broken: Blender 2.76 RC1 and RC2 e24ea81 2015-09-23 14:02
Worked: Blender 2.75a c27589e 2015-07-07 14:56

Short description of error
I am a chinese blender user, and I downloaded Blender 2.76 RC2 yesterday. When I try to modify the interface font in the User Preferences window, I open the file browser and navigate to the system fonts folder with the thumbnails option enabled. Then I scroll down to find the font, but suddenly Blender crashed.

I tried to add a new text object, and modify the fonts with the file browser, the same issue(Blender crashed) happened again.

My system font folder has 745 font files with 623MB disk space.
I tried to creat a font folder with161 font files and 368MB disk space, and then tested the file browser in preview mode, Blender did not crashed again.

It appears that there is a limit to the number of files that the Blender file browser can handle in preview mode. I did not experience this problem with Blender versions 2.75a and earlier.

Exact steps for others to reproduce the error

  1. Open with Blender 2.76 RC1 or RC2;
  2. Creat a simple text object or enter the User Preferences window, and click the open button to modify the fonts.
  3. Navigate to system fonts folder(745 font files with 623MB disk space) and scroll down to find proper font.
  4. Blender crashes when I have not scrolled down to the end of the folder.

Perform the same steps with a folder with161 font files and 368MB disk space, and it loads the file without any problem.fonts_browser_crash.gif

**System Information** Windows 10 Nvidia GeForce GT 750M with latest drivers version 10.18.13.5362 I am using CPU for Cycles renders. 750 GB Hard Drive 16 GB of RAM **Blender Version** Broken: Blender 2.76 RC1 and RC2 e24ea81 2015-09-23 14:02 Worked: Blender 2.75a c27589e 2015-07-07 14:56 **Short description of error** I am a chinese blender user, and I downloaded Blender 2.76 RC2 yesterday. When I try to modify the interface font in the User Preferences window, I open the file browser and navigate to the system fonts folder with the thumbnails option enabled. Then I scroll down to find the font, but suddenly Blender crashed. I tried to add a new text object, and modify the fonts with the file browser, the same issue(Blender crashed) happened again. My system font folder has 745 font files with 623MB disk space. I tried to creat a font folder with161 font files and 368MB disk space, and then tested the file browser in preview mode, Blender did not crashed again. It appears that there is a limit to the number of files that the Blender file browser can handle in preview mode. I did not experience this problem with Blender versions 2.75a and earlier. **Exact steps for others to reproduce the error** 1. Open with Blender 2.76 RC1 or RC2; 2. Creat a simple text object or enter the User Preferences window, and click the open button to modify the fonts. 3. Navigate to system fonts folder(745 font files with 623MB disk space) and scroll down to find proper font. 4. Blender crashes when I have not scrolled down to the end of the folder. Perform the same steps with a folder with161 font files and 368MB disk space, and it loads the file without any problem.![fonts_browser_crash.gif](https://archive.blender.org/developer/F240326/fonts_browser_crash.gif)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @nge

Added subscriber: @nge

#46291 was marked as duplicate of this issue

#46291 was marked as duplicate of this issue

#46318 was marked as duplicate of this issue

#46318 was marked as duplicate of this issue

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

I found the same problem with font preview, just sometimes will happen, although the thumbnail have generated done, but when I drag the bar up or down to view font, sometimes will crash. I'm think the thumbnail preview in blender 2.76 not stable. something like #46291

I found the same problem with font preview, just sometimes will happen, although the thumbnail have generated done, but when I drag the bar up or down to view font, sometimes will crash. I'm think the thumbnail preview in blender 2.76 not stable. something like [#46291 ](https://developer.blender.org/T46291)

Added subscriber: @mont29

Added subscriber: @mont29

Yes, sounds pretty similar to #46291… I’m tempted to merge them, but can you please first try and see whether issue happens with Blender launched with -t 1 command line option?

Thing is, here on linux I used new browser with a dir with thousands of images, without issues. Also, both reports are on win10, if someone could try and reproduce those on other OS (at least another win version) it would be nice too.

Note that preview generation is now done only over a small subset of listed entries, in big directories (the visible ones plus a “margin” before and after them), while in previous system it was generating all previews at once… This is lighter and quicker, but somewhat more complicated codewise.

Yes, sounds pretty similar to #46291… I’m tempted to merge them, but can you please first try and see whether issue happens with Blender launched with `-t 1` command line option? Thing is, here on linux I used new browser with a dir with thousands of images, without issues. Also, both reports are on win10, if someone could try and reproduce those on other OS (at least another win version) it would be nice too. Note that preview generation is now done only over a small subset of listed entries, in big directories (the visible ones plus a “margin” before and after them), while in previous system it was generating all previews at once… This is lighter and quicker, but somewhat more complicated codewise.

@mont29 I have test many times, it's looks the crash only happened in normal model, and never with -t 1. the system is windows 7 sp1 64bit, e5300 2.6ghz 2g ram. because it's not aways, just crash by sometimes, so the results only as a reference, hope can help you, thanks.

@mont29 I have test many times, it's looks the crash only happened in normal model, and never with -t 1. the system is windows 7 sp1 64bit, e5300 2.6ghz 2g ram. because it's not aways, just crash by sometimes, so the results only as a reference, hope can help you, thanks.

Well, tried to reproduce here on my win7 VBox (virtual machine), with a listing of over 1500 pictures, no crash so far…

Also, other question, does the same issue happen if you list many images, but from several subdirectories (using the new 'multi-level' drop-down list in header)?

Well, tried to reproduce here on my win7 VBox (virtual machine), with a listing of over 1500 pictures, no crash so far… Also, other question, does the same issue happen if you list many images, but from several subdirectories (using the new 'multi-level' drop-down list in header)?

Test many and many times, the image preview like font preview, also crashed, and I have test under Multi-level, still happened. it not very frequent, and even let me believe that will not collapse, but it still happened by sometimes. hope more people try that, sorry for my bad English.

Test many and many times, the image preview like font preview, also crashed, and I have test under Multi-level, still happened. it not very frequent, and even let me believe that will not collapse, but it still happened by sometimes. hope more people try that, sorry for my bad English.

Added subscriber: @BBMF

Added subscriber: @BBMF

OK, thanks for the testings, merged the other report then, since it's probably exact same issue.

Now comes the issue of being able to reproduce it… Will try again later today, but I can only do it on a crappy VM where Blender is slow as Hell (have to use software OpenGL), so not sure I'll ever be able to reproduce. I would expect it to happen under linux too, though, that’s strange… :/

OK, thanks for the testings, merged the other report then, since it's probably exact same issue. Now comes the issue of being able to reproduce it… Will try again later today, but I can only do it on a crappy VM where Blender is slow as Hell (have to use software OpenGL), so not sure I'll ever be able to reproduce. I would expect it to happen under linux too, though, that’s strange… :/

Added subscribers: @Sergey, @ideasman42

Added subscribers: @Sergey, @ideasman42

So, was finally able to confirm the issue here (firing Blender with 48 threads!), issue actually lies in our mmap/munmap code for windows, which is not threadsafe. Patch done, but will need to be checked by @Sergey & @ideasman42 before going to master…

So, was finally able to confirm the issue here (firing Blender with 48 threads!), issue actually lies in our mmap/munmap code for windows, which is not threadsafe. Patch done, but will need to be checked by @Sergey & @ideasman42 before going to master…
Bastien Montagne self-assigned this 2015-09-29 15:31:22 +02:00

Added subscriber: @szymi

Added subscriber: @szymi
Bastien Montagne changed title from File Browser Crash while listing big font folders in preview mode to File Browser Crash while listing big folders in preview mode (fonts, images...). 2015-09-29 15:39:48 +02:00

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

Glad that you managed to find the issue mont29.
If there is any additional information needed I did some testing and the bug is easily triggered by holding the scrollbar and scrolling fast up and down on a big folder.
Linux worked fine (tested several distributions and blender versions) windows crashed with software opengl too.
file_browser_crash_windows.txt

linux_thumbnail_testing.txt

I have a > 6000 images folder so I can help with the testing of the fix.

Glad that you managed to find the issue mont29. If there is any additional information needed I did some testing and the bug is easily triggered by holding the scrollbar and scrolling fast up and down on a big folder. Linux worked fine (tested several distributions and blender versions) windows crashed with software opengl too. [file_browser_crash_windows.txt](https://archive.blender.org/developer/F240891/file_browser_crash_windows.txt) [linux_thumbnail_testing.txt](https://archive.blender.org/developer/F240892/linux_thumbnail_testing.txt) I have a > 6000 images folder so I can help with the testing of the fix.

This issue was referenced by 7d2a62ef65

This issue was referenced by 7d2a62ef65e075d10ac57aaf170f5c08e2e5b267

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Bug is expected to be fixed, but check with tomorrow's build from our buildbot would be most welcomed. :)

Bug is expected to be fixed, but check with tomorrow's build from [our buildbot](https://builder.blender.org/download) would be most welcomed. :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46299
No description provided.