Fix T46299: Windows: File Browser Crash while listing big folders in preview mode (fonts, images...).

Windows-only bug, mmap & co are not threadsafe by default on this platform, so we have to add a dedicated
spinlock for them in win32.

Note that we may try to get rid of those mmap later, but not for 2.76!

To be backported to final 2.76...