source/blender/imbuf/intern/IMB_allocimbuf.h
@@ -38,6 +38,18 @@ struct ImBuf;
 void imb_refcounter_lock_init(void);
 void imb_refcounter_lock_exit(void);
 
+#ifdef WIN32
+void imb_mmap_lock_init(void);
+void imb_mmap_lock_exit(void);
+void imb_mmap_lock(void);
+void imb_mmap_unlock(void);
+#else
+#  define imb_mmap_lock_init()
+#  define imb_mmap_lock_exit()
+#  define imb_mmap_lock()
+#  define imb_mmap_unlock()
+#endif
+
 bool imb_addencodedbufferImBuf(struct ImBuf *ibuf);
 bool imb_enlargeencodedbufferImBuf(struct ImBuf *ibuf);
 
