source/blender/imbuf/intern/allocimbuf.c
@@ -62,6 +62,30 @@ void imb_refcounter_lock_exit(void)
 	BLI_spin_end(&refcounter_spin);
 }
 
+#ifdef WIN32
+static SpinLock mmap_spin;
+
+void imb_mmap_lock_init(void)
+{
+	BLI_spin_init(&mmap_spin);
+}
+
+void imb_mmap_lock_exit(void)
+{
+	BLI_spin_end(&mmap_spin);
+}
+
+void imb_mmap_lock(void)
+{
+	BLI_spin_lock(&mmap_spin);
+}
+
+void imb_mmap_unlock(void)
+{
+	BLI_spin_unlock(&mmap_spin);
+}
+#endif
+
 void imb_freemipmapImBuf(ImBuf *ibuf)
 {
 	int a;
