source/blender/imbuf/intern/module.c
@@ -37,6 +37,7 @@
 void IMB_init(void)
 {
 	imb_refcounter_lock_init();
+	imb_mmap_lock_init();
 	imb_filetypes_init();
 	imb_tile_cache_init();
 	colormanagement_init();
@@ -47,6 +48,7 @@ void IMB_exit(void)
 	imb_tile_cache_exit();
 	imb_filetypes_exit();
 	colormanagement_exit();
+	imb_mmap_lock_exit();
 	imb_refcounter_lock_exit();
 }
 
